@@ -1,3 +1,10 @@
+2004-06-28 Savin Zlobec <savin@elatec.si>
+
+        * inc/blib.h:
+        * src/disk.c:
+        Implemented block memory pool without using the cyg_mempool_fix_* 
+        API - blib is now free of kernel dependencies. 
+
 2003-09-01 Savin Zlobec <savin@elatec.si>
 
         * cdl/blib.cdl:
